--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -16,18 +16,20 @@
 		<!-- <link href="../assets/plugins/sal/sal.min.css" rel="stylesheet"> -->
 		<!-- <link href="../assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 		<link href="../assets/css/theme.css" rel="stylesheet">
+		<link href="../assets/css/theme-colors/theme-color-blue.css" rel="stylesheet">
 		<!-- Fonts/Icons -->
 		<link href="../assets/plugins/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
 		<link href="../assets/plugins/font-awesome/css/all.css" rel="stylesheet">
 	</head>
-	<body class="d-flex flex-column min-vh-100" data-preloader="1">
+
+	<body class="d-flex flex-column min-vh-100 theme-color-blue preloader-theme" data-preloader="1">
 
 		<!-- Header -->
-		<div class="header sticky-autohide">
+		<div class="header transparent-light">
 			<div class="container">
 				<!-- Logo -->
 				<div class="header-logo">
-					<h3><a href="#">Sector Health</a></h3>
+					<h3><a href="../index.html">Sector Health</a></h3>
 					<!-- 
 					<img class="logo-dark" src="../assets/images/your-logo-dark.png" alt="">
 					<img class="logo-light" src="../assets/images/your-logo-light.png" alt=""> 
@@ -38,13 +40,26 @@
 		</div>
 		<!-- end Header -->
 
+		<!-- Hero section -->
+		<div class="section bg-image parallax" data-bg-src="../assets/images/bg1.jpg">
+			<div class="bg-color-theme-03 section-divider-curve-bottom">
+				<div class="container text-center">
+						<div class="col-12 col-lg-7 offset-md-1 col-lg-8 offset-lg-2">
+							<h1 class="fw-normal">Request your health data</h1>
+						</div>
+					</div><!-- end row -->
+				</div><!-- end container -->
+			</div><!-- end bg-dark-* -->
+		</div>
+		<!-- end Hero section -->		
+
 		<div class="section">
 			<div class="container">
 				<div class="mb-5">
 					<div class="row text-center">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-							<h2 class="fw-light">Request your health data</h2>
-							<p>Fill in your details and we'll help you collect your information.</p>
+							<h2 class="fw-light">Fill in your details and we'll help you collect your information.</h2>
+							<!-- <p>Fill in your details and we'll help you collect your information.</p> -->
 						</div>
 					</div>
 				</div>
