--- a/index.html
+++ b/index.html
@@ -5,16 +5,16 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta name="description" content="">
         <meta name="keywords" content="">
-		<title>Mono - IT Services</title>
+		<title>Sector Health</title>
 		<!-- Favicon -->
-        <link href="../assets/images/favicon.png" rel="shortcut icon">
+        <link href="" rel="shortcut icon">
 		<!-- CSS -->
 		<link href="../assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
-		<link href="../assets/plugins/owl-carousel/owl.carousel.min.css" rel="stylesheet">
-		<link href="../assets/plugins/owl-carousel/owl.theme.default.min.css" rel="stylesheet">
-		<link href="../assets/plugins/magnific-popup/magnific-popup.min.css" rel="stylesheet">
+		<!-- <link href="../assets/plugins/owl-carousel/owl.carousel.min.css" rel="stylesheet"> -->
+		<!-- <link href="../assets/plugins/owl-carousel/owl.theme.default.min.css" rel="stylesheet"> -->
+		<!-- <link href="../assets/plugins/magnific-popup/magnific-popup.min.css" rel="stylesheet"> -->
 		<link href="../assets/plugins/sal/sal.min.css" rel="stylesheet">
-		<link href="../assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet">
+		<!-- <link href="../assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 		<link href="../assets/css/theme.css" rel="stylesheet">
 		<link href="../assets/css/theme-colors/theme-color-blue.css" rel="stylesheet">
 		<!-- Fonts/Icons -->
@@ -24,7 +24,7 @@
 	<body class="theme-color-blue preloader-theme" data-preloader="1">
 
 		<!-- Header -->
-		<div class="header transparent-light sticky-autohide">
+		<div class="header transparent-light">
 			<div class="container"> 
 				<!-- Logo -->
 				<div class="header-logo">
@@ -156,7 +156,7 @@
 
 		<!-- ***** JAVASCRIPTS ***** -->
 		<script src="../assets/plugins/jquery.min.js"></script>
-		<script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script>
+		<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script> -->
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
 		<script src="../assets/plugins/plugins.js"></script>
 		<script src="../assets/js/functions.js"></script>
