--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -13,7 +13,7 @@
 		<!-- <link href="../assets/plugins/owl-carousel/owl.carousel.min.css" rel="stylesheet"> -->
 		<!-- <link href="../assets/plugins/owl-carousel/owl.theme.default.min.css" rel="stylesheet"> -->
 		<!-- <link href="../assets/plugins/magnific-popup/magnific-popup.min.css" rel="stylesheet"> -->
-		<!-- <link href="../assets/plugins/sal/sal.min.css" rel="stylesheet"> -->
+		<link href="../assets/plugins/sal/sal.min.css" rel="stylesheet">
 		<!-- <link href="../assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
 		<link href="../assets/css/theme.css" rel="stylesheet">
 		<link href="../assets/css/theme-colors/theme-color-blue.css" rel="stylesheet">
