--- a/index.html
+++ b/index.html
@@ -9,17 +9,17 @@
 		<!-- Favicon -->
         <link href="" rel="shortcut icon">
 		<!-- CSS -->
-		<link href="../assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
+		<link href="assets/plugins/bootstrap/bootstrap.min.css" rel="stylesheet">
 		<!-- <link href="../assets/plugins/owl-carousel/owl.carousel.min.css" rel="stylesheet"> -->
 		<!-- <link href="../assets/plugins/owl-carousel/owl.theme.default.min.css" rel="stylesheet"> -->
 		<!-- <link href="../assets/plugins/magnific-popup/magnific-popup.min.css" rel="stylesheet"> -->
-		<link href="../assets/plugins/sal/sal.min.css" rel="stylesheet">
+		<link href="assets/plugins/sal/sal.min.css" rel="stylesheet">
 		<!-- <link href="../assets/plugins/swiper/swiper-bundle.min.css" rel="stylesheet"> -->
-		<link href="../assets/css/theme.css" rel="stylesheet">
-		<link href="../assets/css/theme-colors/theme-color-blue.css" rel="stylesheet">
+		<link href="assets/css/theme.css" rel="stylesheet">
+		<link href="assets/css/theme-colors/theme-color-blue.css" rel="stylesheet">
 		<!-- Fonts/Icons -->
-		<link href="../assets/plugins/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
-		<link href="../assets/plugins/font-awesome/css/all.css" rel="stylesheet">
+		<link href="assets/plugins/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+		<link href="assets/plugins/font-awesome/css/all.css" rel="stylesheet">
 	</head>
 	<body class="theme-color-blue preloader-theme" data-preloader="1">
 
@@ -28,7 +28,7 @@
 			<div class="container"> 
 				<!-- Logo -->
 				<div class="header-logo">
-					<h3><a href="../index.html">Sector Health</a></h3>
+					<h3><a href="index.html">Sector Health</a></h3>
 					<!-- 
 					<img class="logo-dark" src="../assets/images/your-logo-dark.png" alt="">
 					<img class="logo-light" src="../assets/images/your-logo-light.png" alt=""> 
@@ -39,7 +39,7 @@
 		<!-- end Header -->
 
 		<!-- Hero section -->
-		<div class="section-xl bg-image parallax" data-bg-src="../assets/images/bg1.jpg">
+		<div class="section-xl bg-image parallax" data-bg-src="assets/images/bg1.jpg">
 			<div class="bg-color-theme-03 section-divider-curve-bottom">
 				<div class="container text-center">
 						<div class="col-12 col-lg-7 offset-md-1 col-lg-8 offset-lg-2">
@@ -58,13 +58,13 @@
 				<div class="row align-items-center g-5">
 					<div class="col-12 col-lg-6">
 						<div class="box-shadow">
-							<img class="border-radius" src="../assets/images/example2.jpg" alt="">
+							<img class="border-radius" src="assets/images/example2.jpg" alt="">
 						</div>
 					</div>
 					<div class="col-12 col-lg-6">
 						<h3 class="fw-light">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</h3>
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-						<a class="button-text-2 mt-3" href="../pages/request_data.html">Request your data</a>
+						<a class="button-text-2 mt-3" href="pages/request_data.html">Request your data</a>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -117,14 +117,14 @@
 		<!-- end Process section -->
 
 		<!-- Parallax section -->
-		<div class="section bg-image parallax" data-bg-src="../assets/images/bg1.jpg">
+		<div class="section bg-image parallax" data-bg-src="assets/images/bg1.jpg">
 			<div class="bg-color-theme-03">
 				<div class="container text-center">
 					<div class="row g-4">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
 							<h1 class="fw-light" data-sal="slide-up" data-sal-delay="50">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
 							<div class="mt-4" data-sal="slide-up" data-sal-delay="150">
-								<a class="button button-lg button-radius button-white" href="../pages/request_data.html">Request your health data</a>
+								<a class="button button-lg button-radius button-white" href="pages/request_data.html">Request your health data</a>
 							</div>
 						</div>
 					</div><!-- end row -->
@@ -155,10 +155,10 @@
 		<!-- end Scroll to top button -->
 
 		<!-- ***** JAVASCRIPTS ***** -->
-		<script src="../assets/plugins/jquery.min.js"></script>
+		<script src="assets/plugins/jquery.min.js"></script>
 		<!-- <script src="https://maps.googleapis.com/maps/api/js?key=YOUR_API_KEY"></script> -->
 		<script src="https://polyfill.io/v3/polyfill.min.js?features=IntersectionObserver"></script>
-		<script src="../assets/plugins/plugins.js"></script>
-		<script src="../assets/js/functions.js"></script>
+		<script src="assets/plugins/plugins.js"></script>
+		<script src="assets/js/functions.js"></script>
 	</body>
 </html>
