--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 			<div class="bg-color-theme-03 section-divider-curve-bottom">
 				<div class="container text-center">
 						<div class="col-12 col-lg-7 offset-md-1 col-lg-8 offset-lg-2">
-							<h1 class="fw-normal">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+							<h1 class="fw-normal">Your data can help you manage your health, find how to request it</h1>
 							<a class="button button-lg button-radius button-outline-white-2 mt-3" href="#about">Learn More</a>
 						</div>
 					</div><!-- end row -->
@@ -62,8 +62,8 @@
 						</div>
 					</div>
 					<div class="col-12 col-lg-6">
-						<h3 class="fw-light">Vivamus elementum semper nisi. Aenean vulputate eleifend tellus.</h3>
-						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+						<h3 class="fw-light">You are entitled to see your health data through a Subject Access Request</h3>
+						<p>We provide you with a private, safe and easy way to send SARs (Subject Access Requests) to all the hospitals, clinics and practices that keep your health data. Once submitted, they are required to provide you with the requested data within one calendar month. This process may last several weeks, but we are here to help. We only hold contact details on the users of our service, all your private and sensitive information remains between you and the healthcare providers. Include us in the conversation as much or as little as you want. We would love to hear your story about accessing or using your own health data!</p>
 						<a class="button-text-2 mt-3" href="pages/request_data.html">Request your data</a>
 					</div>
 				</div><!-- end row -->
@@ -80,36 +80,32 @@
 						<div class="circle-box-lg bg-white box-shadow mb-3">
 							<h3 class="text-gradient-6">1</h3>
 						</div>
-						<h5>First Step</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt</p>
+						<h5>List Hospitals</h5>
+						<p>Input your name, email and list the hospitals you would like to request your data from</p>
 					</div>
 					<!-- Process box 2 -->
 					<div class="col-12 col-md-6 col-lg-3" data-sal="fade" data-sal-delay="50">
 						<div class="circle-box-lg bg-white box-shadow mb-3">
 							<h3 class="text-gradient-6">2</h3>
 						</div>
-						<h5>Second Step</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt</p>
+						<h5>Prepare Requests</h5>
+						<p>We will prepare the requests for you along with the correct contact for each institution. You will receive an email with a link within 48h </p>
 					</div>
 					<!-- Process box 3 -->
 					<div class="col-12 col-md-6 col-lg-3" data-sal="fade" data-sal-delay="50">
 						<div class="circle-box-lg bg-white box-shadow mb-3">
 							<h3 class="text-gradient-6">3</h3>
 						</div>
-						<h5>Third Step</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt</p>
+						<h5>Review</h5>
+						<p>Click on the link from us, review the message and prove your identity by attaching your ID and Proof of Address </p>
 					</div>
 					<!-- Process box 4 -->
 					<div class="col-12 col-md-6 col-lg-3" data-sal="fade" data-sal-delay="50">
 						<div class="circle-box-lg bg-white box-shadow mb-3">
 							<h3 class="text-gradient-6">4</h3>
 						</div>
-						<h5>Fourth Step</h5>
-						<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-						tempor incididunt</p>
+						<h5>Send Request</h5>
+						<p>We want to help you find and access your health data. Any obstacles? Keep us in the loop at support@accessrequest.health </p>
 					</div>
 				</div><!-- end row -->
 			</div><!-- end container -->
@@ -122,7 +118,7 @@
 				<div class="container text-center">
 					<div class="row g-4">
 						<div class="col-12 col-md-10 offset-md-1 col-lg-8 offset-lg-2">
-							<h1 class="fw-light" data-sal="slide-up" data-sal-delay="50">Lorem ipsum dolor sit amet, consectetur adipiscing elit</h1>
+							<h1 class="fw-light" data-sal="slide-up" data-sal-delay="50">Your data can help you manage your health, ask to see it</h1>
 							<div class="mt-4" data-sal="slide-up" data-sal-delay="150">
 								<a class="button button-lg button-radius button-white" href="pages/request_data.html">Request your health data</a>
 							</div>
