--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
 						</div>
 					</div>
 					<div class="col-12 col-lg-6">
-						<h3 class="fw-light">You are entitled to see your health data through a Subject Access Request</h3>
+						<h3 class="fw-light">You are entitled to see your health data through Subject Access Requests</h3>
 						<p>We provide you with a private, safe and easy way to send SARs (Subject Access Requests) to all the hospitals, clinics and practices that keep your health data. Once submitted, they are required to provide you with the requested data within one calendar month. This process may last several weeks, but we are here to help. We only hold contact details on the users of our service, all your private and sensitive information remains between you and the healthcare providers. Include us in the conversation as much or as little as you want. We would love to hear your story about accessing or using your own health data!</p>
 						<a class="button-text-2 mt-3" href="pages/request_data.html">Request your data</a>
 					</div>
@@ -81,7 +81,7 @@
 							<h3 class="text-gradient-6">1</h3>
 						</div>
 						<h5>List Hospitals</h5>
-						<p>Input your name, email and list the hospitals you would like to request your data from</p>
+						<p>Input your name, contact email and list the hospitals, clinics or GPs you would like to request your data from</p>
 					</div>
 					<!-- Process box 2 -->
 					<div class="col-12 col-md-6 col-lg-3" data-sal="fade" data-sal-delay="50">
