* updates error message * updates script url

--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -67,7 +67,7 @@
 					<div class="col-12 col-sm-10 offset-sm-1 col-md-8 offset-md-2 text-center">
 						<!-- Contact Form -->
 						<div class="contact-form">
-							<form method="POST" id="contactform" action="https://script.google.com/macros/s/AKfycbyZD4Bbc2qhItPsZG-twnR7noayuWvHAlfnWvVcAuwtjxdJJp7CmBJ9NgzzP3vtoDI4MQ/exec">
+							<form method="POST" id="contactform" action="https://script.google.com/macros/s/AKfycbx2Q0aBR4mLrMZFUMukzMqdzoxWh7t8-YNJa7DauqMktY1M8T8Bg9tXXGb6S4_ba6ru/exec">
 								<div class="row gx-3 gy-0">
 									<div class="col-12 col-sm-6">
 										<input type="text" id="name" name="first_name" placeholder="Name" required>
@@ -115,7 +115,7 @@
 							<!-- Submit result -->
 						<div class="submit-result">
 							<span id="success">Thank you! Your request has been sent.</span>
-							<span id="error">Something went wrong. Please try again.</span>
+							<span id="error">Something went wrong. Please contact support@accessrequest.health .</span>
 						</div>
 					</div><!-- end contact-form -->
 				</div>
