--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -82,13 +82,14 @@
 										<input type="email" id="email" name="email" placeholder="E-Mail" required>
 									</div>
 									<div class="col-12 col-sm-6">
-										<input type="date" id="dob" name="dob" placeholder="Date of Birth" required>
+										<!-- <input type="date" id="dob" name="dob" placeholder="Date of Birth" required> -->
+										<input type="text" class="form-control" placeholder="Date of Birth" onfocus="(this.type='date')"/> 
 									</div>
 								</div>
 								<div id="input_fields_wrap">
 									<div class="input_fields_line row gx-3 gy-0">
 										<div class="input_hospital">
-									  		<input type="text" id="hospital" name="hospital_name_unparsed[1]" placeholder="Hospital Name">
+									  		<input type="text" id="hospital" name="hospital_name_unparsed[1]" placeholder="Hospital/GP Name">
 										</div>
 									<!-- <br> -->
 									</div>
