make dob required

--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -83,7 +83,7 @@
 									</div>
 									<div class="col-12 col-sm-6">
 										<!-- <input type="date" id="dob" name="dob" placeholder="Date of Birth" required> -->
-										<input type="text" class="form-control" placeholder="Date of Birth" onfocus="(this.type='date')"/> 
+										<input type="text" class="form-control" placeholder="Date of Birth" onfocus="(this.type='date')" required/> 
 									</div>
 								</div>
 								<div id="input_fields_wrap">
