--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -89,7 +89,7 @@
 									<label for="email">Email</label>
 									<input type="email" id="email" name="email" required>
 								</div>
-								<div class="col-12 col-sm-6">
+								<div class="col-12 col-sm-6 height: 2.375rem">
 									<label for="dob">Date of Birth</label><input type="date" id="dob" name="dob"
 										required>
 									<!-- <input type="text" class="form-control" id="dob" name="dob" placeholder="Date of Birth" onclick="(this.type='date')" required> -->
