--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -90,10 +90,7 @@
 									<input type="email" id="email" name="email" required>
 								</div>
 								<div class="col-12 col-sm-6 height: 2.375rem">
-									<label for="dob">Date of Birth</label><input type="date" id="dob" name="dob"
-										required>
-									<!-- <input type="text" class="form-control" id="dob" name="dob" placeholder="Date of Birth" onclick="(this.type='date')" required> -->
-									<!-- <input type="text" class="form-control" placeholder="Date of Birth" onfocus="(this.type='date')" required/>  -->
+									<label for="dob">Date of Birth</label><input type="date" id="dob" name="dob" min="1900-01-01" max="2007-01-01" required>
 								</div>
 							</div>
 							<div id="input_fields_wrap">
