--- a/pages/request_data.html
+++ b/pages/request_data.html
@@ -89,7 +89,7 @@
 									<label for="email">Email</label>
 									<input type="email" id="email" name="email" required>
 								</div>
-								<div class="col-12 col-sm-6 height: 2.375rem">
+								<div class="col-12 col-sm-6 min-height: 2.375rem">
 									<label for="dob">Date of Birth</label><input type="date" id="dob" name="dob" min="1900-01-01" max="2007-01-01" required>
 								</div>
 							</div>
